# rust-wasm-and-c

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.rs
pkg/: index.html
src/: lib.rs  test.c
