[package]
name = "freetypewasm"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]# , "rlib"]

# [features]
# default = ["console_error_panic_hook"]

# [dependencies]
# wasm-bindgen = "0.2.63"
# console_error_panic_hook = { version = "0.1.6", optional = true }
# wee_alloc = { version = "0.4.5", optional = true }

[build-dependencies]
cc = "1.0"

# [dev-dependencies]
# wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+crt-static"]